# mycel-agent-sdk

./: .dockerignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PLANS.md  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  tests.yml
docker/: README.md
docker/sdk/: Dockerfile
docs/: config.md  examples.md  gateway_model_provider.md  human_in_the_loop.md  index.md  mcp.md  multi_agent.md  quickstart.md  release.md  usage.md  visualization.md
docs/execplans/: mycel-fork-gateway-and-rust-tiers.md
docs/ja/: agents.md  config.md  context.md  examples.md  gateway_model_provider.md  guardrails.md  handoffs.md  human_in_the_loop.md  index.md  mcp.md  multi_agent.md  quickstart.md  release.md  repl.md  results.md  running_agents.md  streaming.md  tools.md  tracing.md  usage.md  visualization.md
docs/ko/: agents.md  config.md  context.md  examples.md  (+17 more)
gateway/: Cargo.toml  Dockerfile  README.md
gateway/src/: lib.rs  main.rs
gateway/tests/: openai_chat_contract.rs
rust/: README.md
rust/mycel_accelerator/: Cargo.toml
rust/mycel_accelerator/src/: lib.rs
tests/: test_agent_runner.py  test_agent_runner_streamed.py  test_agents_logging.py  test_anthropic_thinking_blocks.py  test_builtin_toolkit_exports.py  test_extended_thinking_message_order.py  test_gateway_model_example.py  test_gemini_thought_signatures.py  test_permissions_policy_helpers.py  test_pr_labels.py  test_prompts_load.py  test_run_state.py  test_stream_events.py  test_streaming_logging.py  test_trace_processor.py
(+124 files in other folders)
